03-Oct-2015 Laurent Duflot
	* data/data15_13TeV_p2425.ds : update list of p2425 data samples
	* tag as ZeroLeptonRun2-00-00-53

02-Oct-2015 Laurent Duflot
	* CRWT,CRZ,CR3L,BuildSUSYObjects: add trigger HLT_e24_lhmedium_iloose_L1EM20VH


01-Oct-2015 Laurent Duflot
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list with latest production
	* data/data15_13TeV_p2425.ds : add current list of p2425 data samples

29-Sep-2015 Laurent Duflot
	* FilterUpdateMerge.cxx: update filtering cuts with values in GeV
	* mc15_13TeV_25ns_SM_p2419.ds: update list with latest production

28-Sep-2015 Geraldine Conti
	* included CR3L in the config file
	* Added reclustering for VRWT in config file

25-Sep-2015 Laurent Duflot
	* data/data15_13TeV_p2419.ds: add current list of p2419 data samples
	* JobBookeeper, BuildSUSYObjects: remove extra TEvent to read metadata
	as this caused Trigger to be initialised only at the second event.
	* data/mc15_13TeV_25ns_SM_p2419.ds, data/mc15_13TeV_signal_25ns_p2419.ds: add current list of p2419 MC samples
	* tag as ZeroLeptonRun2-00-00-51

24-Sep-2015 Laurent Duflot
	* BuildSUSYObjects: do not run tau efficiency corrections on data
	* BuildSUSYObjects: find signal e/mu down to 10GeV instead of 25GeV
	* ZeroLeptonCRZ: lower second lepton pT cut to 10GeV
	* ZeroLeptonCRWT: option to use MET trigger and lepton of 10GeV
	* zerolepton.config: add CRWT/VRWT with MET trigger
	* zerolepton.config: only JET and MET systematics

23-Sep-2015 Laurent Duflot
	* BuildSUSYObjects: change isolation WP for photons to Cone20
	* PhysObjProxyUtils, PhysObjProxyFiller, ZeroLeptonCutVal, cutfile8TeV.dat: change jet pT cut from 40/60 GeV to 50 GeV
	* ZeroLeptonNTVars, SR & CR, PhysObjProxyUtils: add min dPhi between
	jets in bad Tile module and MET

22-Sep-2015 Laurent Duflot
	* INSTALL : update to SUSY,2.3.28, reference release for Oct FAR
	* tag as ZeroLeptonRun2-00-00-50

22-Sep-2015 Laurent Duflot
	* BuildSUSYObjects: change overlap removal