@@ -13,7 +13,7 @@ inline ZeroLeptonRunPeriod periodFromString(const std::string& period)
   return INVALID;
 }
 
-enum ZeroLeptonDerivationTag {NotADerivation, p1872, p2353, p2363, p2372, p2375, p2377, p2384, p2419, INVALID_Derivation};
+enum ZeroLeptonDerivationTag {NotADerivation, p1872, p2353, p2363, p2372, p2375, p2377, p2384, p2419, p2425, INVALID_Derivation};
 
 inline ZeroLeptonDerivationTag derivationTagFromString(const std::string& tag)
 {
@@ -26,6 +26,7 @@ inline ZeroLeptonDerivationTag derivationTagFromString(const std::string& tag)
   if ( tag == "p2377" ) return p2377;
   if ( tag == "p2384" ) return p2384;
   if ( tag == "p2419" ) return p2419;
+  if ( tag == "p2425" ) return p2425;
   return INVALID_Derivation;
 }
 
